womtool/src/test/resources/validate/wdl/wdl_draft2/invalid/bad_task/bad_task.wdl
workflow oops {
  call oopsie
}

task oopsie {
  String str
  command { echo ${str} }
  runtime { docker: docker_image }
}
